--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "groupby-backend",
   "version": "1.0.0",
-  "description": "Backend API for GroupBy - A Curated Event & Gathering Platform",
+  "description": "Backend API for GroupBy - Authentication Service",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "check": "node check-setup.js",
+    "build": "npm install && echo 'Build completed successfully'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "events",
-    "gatherings",
+    "authentication",
     "api",
     "nodejs",
     "express",
-    "mongodb"
+    "mongodb",
+    "jwt"
   ],
   "author": "",
   "license": "ISC",
@@ -25,16 +25,13 @@
     "npm": ">=6.0.0"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.2.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^7.0.0",
-    "mongoose": "^8.0.3",
-    "openai": "^4.20.1"
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
