--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+backend/node_modules/
+backend/.env
+frontend/node_modules/
+frontend/.env
+frontend/dist/
+backend/dist/
+
+# Root ignores
 node_modules/
 .env
 .DS_Store
