--- a/backend/package.json
+++ b/backend/package.json
@@ -1,39 +1,19 @@
 {
-  "name": "groupby-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Backend API for GroupBy - Authentication Service",
-  "main": "server.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "npm install && echo 'Build completed successfully'",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "authentication",
-    "api",
-    "nodejs",
-    "express",
-    "mongodb",
-    "jwt"
-  ],
-  "author": "",
-  "license": "ISC",
-  "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
+    "dev": "node --watch server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
   }
 }
