--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,15 +1,34 @@
-backend/node_modules/
-backend/.env
-frontend/node_modules/
-frontend/.env
-frontend/dist/
-backend/dist/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Root ignores
-node_modules/
-.env
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-*.log
-dist/
-build/
+*.pem
 
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+.env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
