--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-icons": "^1.3.0"
+    "@radix-ui/react-icons": "^1.3.0",
+    "framer-motion": "^11.0.0",
+    "motion": "^10.18.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
