--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,31 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "^14.2.0",
-    "lucide-react": "^0.268.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
-    "embla-carousel-react": "^8.0.0",
-    "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@react-oauth/google": "^0.13.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.0",
-    "motion": "^10.18.0"
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.268.0",
+    "motion": "^10.18.0",
+    "next": "^14.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.2.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0"
+    "typescript": "^5.0.0"
   }
 }
